--- a/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
@@ -1,7 +1,6 @@
-.Base js file
+.Requires other js files
 [source, js]
 ----
-./plugins/emoticons/plugin.js
 ./plugins/emoticons/js/emojiimages.js
 ./plugins/emoticons/js/emojis.js
 ----
