--- a/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
@@ -1,10 +1,4 @@
-.Base js file
-[source, js]
-----
-./plugins/powerpaste/plugin.js
-----
-
-.other js files
+.requires other js files
 [source, js]
 ----
 ./plugins/powerpaste/js/wordimport.js
