--- a/modules/ROOT/partials/plugin-files/plugin-file-list-a11ychecker.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-a11ychecker.adoc
@@ -1,10 +1,4 @@
-.Base js file.
-[source, js]
-----
-./plugins/a11ychecker/plugin.js
-----
-
-.css or bundled css
+.Requires css or bundled css
 [source, js]
 ----
 ./plugins/a11ychecker/css/annotations.css // or
