--- a/modules/ROOT/partials/plugin-files/plugin-file-list-tinycomments.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-tinycomments.adoc
@@ -1,10 +1,4 @@
-.Base js file
-[source, js]
-----
-./plugins/tinycomments/plugin.js
-----
-
-.css or bundled css
+.Requires css or bundled css
 [source, js]
 ----
 ./plugins/tinycomments/css/tinycomments.css //or
