--- a/modules/ROOT/partials/plugin-files/plugin-file-list-mediaembed.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-mediaembed.adoc
@@ -1,10 +1,4 @@
-.Base js file
-[source, js]
-----
-./plugins/mediaembed/plugin.js
-----
-
-.css or bundled css
+.Requires css or bundled css
 [source, js]
 ----
 ./plugins/mediaembed/content.min.css //or
