--- a/modules/ROOT/partials/plugin-files/plugin-file-list-mentions.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-mentions.adoc
@@ -1,10 +1,4 @@
-.Base js file
-[source, js]
-----
-./plugins/mentions/plugin.js
-----
-
-.css or bundled css
+.Requries css or bundled css
 [source, js]
 ----
 ./plugins/mentions/css/mentions.css //or
