--- a/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
@@ -1,10 +1,4 @@
-.Base js file
-[source, js]
-----
-./plugins/pageembed/plugin.js
-----
-
-.css or bundled css
+.Requires css or bundled css
 [source, js]
 ----
 ./plugins/pageembed/css/empa30.css //or
