DOC-2368: additional copy edits to bundling-plugins.adoc and related partials,includes.

--- a/modules/ROOT/pages/bundling-plugins.adoc
+++ b/modules/ROOT/pages/bundling-plugins.adoc
@@ -7,17 +7,11 @@
 include::partial$module-loading/bundling-ref-example.adoc[]
 :!editorcomponent:
 
+include::partial$plugin-files/plugin-file-index.js.adoc[]
+
 The following table shows examples of the syntax used to bundle the following plugin.
 
-Required files for an example plugin:
-
-[source, js]
-----
-./plugins/example/content.js // or './plugins/example/content_css.js'
-./plugins/plugincode // the plugincode placeholder must be replaced with the specific plugincode
-----
-
-Example syntax for including the example "plugin" in a bundle using `content.js` or `content_css.js` files for bundling:
+Example syntax for including the example "plugin" in a bundle using `content.js`for bundling:
 
 [cols='1,1,4']
 |===
@@ -28,16 +22,14 @@ Example syntax for including the example "plugin" in a bundle using `content.js`
 a|
 [source, js]
 ----
-import pluginCss from 'tinymce/plugins/example/content.js'; // or import pluginCss from 'tinymce/plugins/example/content_css.js';
-import 'tinymce/plugins/example';
+import 'tinymce/plugins/plugincode';
 ----
 
 |`.zip`
 a|
 [source, js]
 ----
-import '../tinymce/plugins/example/content.js'; // or import '../tinymce/plugins/example/content_css.js';
-import '../tinymce/plugins/example/plugin';
+import '../tinymce/plugins/plugincode';
 ----
 
 .2+|Common JS
@@ -45,16 +37,14 @@ import '../tinymce/plugins/example/plugin';
 a|
 [source, js]
 ----
-const pluginCss = require('tinymce/plugins/example/content.js'); // or require('tinymce/plugins/example/content_css.js'); 
-require('tinymce/plugins/example');
+require('tinymce/plugins/plugincode');
 ----
 
 |`.zip`
 a|
 [source, js]
 ----
-const pluginCss = require('../tinymce/plugins/example/content.js'); //or require('../tinymce/plugins/example/content_css.js');
-require('../tinymce/plugins/example/plugin.js');
+require('../tinymce/plugins/plugincode');
 ----
 |===
 
