--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -1,83 +1,30 @@
 == Contents
 
-include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
-
 
 [[premium-plugins]]
-== Premium plugins
-
-include::partial$plugin-files/plugin-file-bundling-message.adoc[]
-
-include::partial$plugin-files/plugin-file-index.js.adoc[]
+=== Premium plugins
 
 [NOTE]
-include::partial$module-loading/admon-bundling-plugin-langs.adoc[]
-
-'''
-
-include::partial$plugin-files/plugin-file-bundling-also-requires.adoc[]
-
-[[a11ychecker]]
-=== Accessibility Checker (`+a11ychecker+`)
-
-include::partial$plugin-files/plugin-file-list-a11ychecker.adoc[]
-
-[[tinycomments]]
-=== Comments (`+tinycomments+`)
-
-include::partial$plugin-files/plugin-file-list-tinycomments.adoc[]
-
-[[advcode]]
-=== Enhanced Code Editor (`+advcode+`)
-
-include::partial$plugin-files/plugin-file-list-advcode.adoc[]
-
-[[linkchecker]]
-=== Link Checker (`+linkchecker+`)
-
-include::partial$plugin-files/plugin-file-list-linkchecker.adoc[]
-
-[[mediaembed]]
-=== Media Embed (`+mediaembed+`)
-
-include::partial$plugin-files/plugin-file-list-mediaembed.adoc[]
-
-[[mentions]]
-=== Mentions (`+mentions+`)
-
-include::partial$plugin-files/plugin-file-list-mentions.adoc[]
-
-[[pageembed]]
-=== Pageembed (`+pageembed+`)
-
-include::partial$plugin-files/plugin-file-list-pageembed.adoc[]
-
-[[powerpaste]]
-=== PowerPaste (`+powerpaste+`)
-
-include::partial$plugin-files/plugin-file-list-powerpaste.adoc[]
-
-'''
-
-[[community-plugins]]
-== Community plugins
+Currently `.zip` style bundling is only available for premium plugins.
 
 include::partial$plugin-files/plugin-file-bundling-message.adoc[]
 
-include::partial$plugin-files/plugin-file-index.js.adoc[]
+include::partial$module-loading/admon-bundling-plugin-langs.adoc[]
 
-'''
+[[community-plugins]]
+=== Community plugins
+
+include::partial$plugin-files/plugin-file-bundling-message.adoc[]
 
 include::partial$plugin-files/plugin-file-bundling-also-requires.adoc[]
 
 [[emoticons]]
-=== Emoticons (`+emoticons+`)
+==== Emoticons (`+emoticons+`)
 
 include::partial$plugin-files/plugin-file-list-emoticons.adoc[]
 
-'''
 
 [[plugin-language-files]]
-== Plugin language files
+=== Plugin language files
 
 include::partial$module-loading/bundling-plugin-language-files.adoc[]
