--- a/modules/ROOT/partials/plugin-files/plugin-file-bundling-also-requires.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-bundling-also-requires.adoc
@@ -1,2 +1,2 @@
 [TIP]
-The below plugin/s also require the files outlined under each plugin section when bundling {productname} in addition to the xref:bundling-plugins.adoc#base-index-js-file[base `index.js`] file.
+The below plugin also requires the additional file along side the xref:bundling-plugins.adoc#base-folder[base folder].
