--- a/modules/ROOT/partials/plugin-files/plugin-file-index.js.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-index.js.adoc
@@ -1,5 +1,8 @@
-[[base-index-js-file]]
-.Base index.js required file for each plugin.
+[[base-folder]]
+== Required base folder
+
+The below base folder is required for each plugin when bundling {productname}.
+
 [source, js]
 ----
 ./plugins/plugincode
