--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -419,3 +419,4 @@
 * xref:invalid-api-key.adoc[Invalid API key]
 * xref:license-key.adoc[License key]
 * xref:support.adoc[Support]
+* xref:about-tiny-usage-based-billing.adoc[Usage-Based Billing]
