DOC-2370: change filename.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -419,4 +419,4 @@
 * xref:invalid-api-key.adoc[Invalid API key]
 * xref:license-key.adoc[License key]
 * xref:support.adoc[Support]
-* xref:about-tiny-usage-based-billing.adoc[Usage-Based Billing]
+* xref:usage-based-billing.adoc[Usage-Based Billing]
