--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
@@ -52,7 +52,7 @@ Read more about using authorization in the xref:individual-export-to-pdf-on-prem
 ----
 version: "3.8"
 services:
-  pdf-converter:
+  pdf-converter-tiny:
     image: {dockerimageexporttopdf}:[version]
     ports:
       - "8080:8080"
