--- a/modules/ROOT/partials/module-loading/admon-bundling-plugin-langs.adoc
+++ b/modules/ROOT/partials/module-loading/admon-bundling-plugin-langs.adoc
@@ -1,6 +1,6 @@
 [NOTE]
 ====
-Plugin language files (such as `+./plugins/plugincode/langs/sv_SE.js+`) are required where the editor user interface is localized using the xref:ui-localization.adoc#language[language option].
+Plugin language files (such as `+./plugins/<plugincode>/langs/sv_SE.js+`) are required where the editor user interface is localized using the xref:ui-localization.adoc#language[language option].
 
 The below plugins require these xref:bundling-plugins.adoc#plugin-language-files[plugin-language-files]
 
