--- a/modules/ROOT/partials/module-loading/bundling-plugin-language-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-language-files.adoc
@@ -1,43 +1,43 @@
-IMPORTANT: Replace `plugincode` placeholder with the specific `plugincode` when adding the plugin language files to your config.
+IMPORTANT: Replace `+<plugincode>+` placeholder with the specific `plugincode` when adding the plugin language files to your config.
 
 [source, js]
 ----
-./plugins/plugincode/langs/ar.js
-./plugins/plugincode/langs/bg_BG.js
-./plugins/plugincode/langs/ca.js
-./plugins/plugincode/langs/cs.js
-./plugins/plugincode/langs/da.js
-./plugins/plugincode/langs/de.js
-./plugins/plugincode/langs/el.js
-./plugins/plugincode/langs/es.js
-./plugins/plugincode/langs/eu.js
-./plugins/plugincode/langs/fa.js
-./plugins/plugincode/langs/fi.js
-./plugins/plugincode/langs/fr_FR.js
-./plugins/plugincode/langs/he_IL.js
-./plugins/plugincode/langs/hi.js
-./plugins/plugincode/langs/hr.js
-./plugins/plugincode/langs/hu_HU.js
-./plugins/plugincode/langs/id.js
-./plugins/plugincode/langs/it.js
-./plugins/plugincode/langs/ja.js
-./plugins/plugincode/langs/kk.js
-./plugins/plugincode/langs/ko_KR.js
-./plugins/plugincode/langs/ms.js
-./plugins/plugincode/langs/nb_NO.js
-./plugins/plugincode/langs/nl.js
-./plugins/plugincode/langs/pl.js
-./plugins/plugincode/langs/pt_BR.js
-./plugins/plugincode/langs/pt_PT.js
-./plugins/plugincode/langs/ro.js
-./plugins/plugincode/langs/ru.js
-./plugins/plugincode/langs/sk.js
-./plugins/plugincode/langs/sl_SI.js
-./plugins/plugincode/langs/sv_SE.js
-./plugins/plugincode/langs/th_TH.js
-./plugins/plugincode/langs/tr.js
-./plugins/plugincode/langs/uk.js
-./plugins/plugincode/langs/vi.js
-./plugins/plugincode/langs/zh_CN.js
-./plugins/plugincode/langs/zh_TW.js
+./plugins/<plugincode>/langs/ar.js
+./plugins/<plugincode>/langs/bg_BG.js
+./plugins/<plugincode>/langs/ca.js
+./plugins/<plugincode>/langs/cs.js
+./plugins/<plugincode>/langs/da.js
+./plugins/<plugincode>/langs/de.js
+./plugins/<plugincode>/langs/el.js
+./plugins/<plugincode>/langs/es.js
+./plugins/<plugincode>/langs/eu.js
+./plugins/<plugincode>/langs/fa.js
+./plugins/<plugincode>/langs/fi.js
+./plugins/<plugincode>/langs/fr_FR.js
+./plugins/<plugincode>/langs/he_IL.js
+./plugins/<plugincode>/langs/hi.js
+./plugins/<plugincode>/langs/hr.js
+./plugins/<plugincode>/langs/hu_HU.js
+./plugins/<plugincode>/langs/id.js
+./plugins/<plugincode>/langs/it.js
+./plugins/<plugincode>/langs/ja.js
+./plugins/<plugincode>/langs/kk.js
+./plugins/<plugincode>/langs/ko_KR.js
+./plugins/<plugincode>/langs/ms.js
+./plugins/<plugincode>/langs/nb_NO.js
+./plugins/<plugincode>/langs/nl.js
+./plugins/<plugincode>/langs/pl.js
+./plugins/<plugincode>/langs/pt_BR.js
+./plugins/<plugincode>/langs/pt_PT.js
+./plugins/<plugincode>/langs/ro.js
+./plugins/<plugincode>/langs/ru.js
+./plugins/<plugincode>/langs/sk.js
+./plugins/<plugincode>/langs/sl_SI.js
+./plugins/<plugincode>/langs/sv_SE.js
+./plugins/<plugincode>/langs/th_TH.js
+./plugins/<plugincode>/langs/tr.js
+./plugins/<plugincode>/langs/uk.js
+./plugins/<plugincode>/langs/vi.js
+./plugins/<plugincode>/langs/zh_CN.js
+./plugins/<plugincode>/langs/zh_TW.js
 ----
